[package]
name = "kintone-rs"
version = "0.3.1"
authors = ["Toru Kobayashi <koba0004@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/kintone-rs"
license = "MIT"
description = "A kintone API client for Rust language"
repository = "https://github.com/koba04/kintone-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
clap = "3.0.0-beta.2"
url = "1.7.2"